--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,51 @@ video {
     width: 100%;
     height: 100%;
 }
+
+.vid-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #225470;
+    z-index: 1;
+    opacity: 0.8;
+}
+
+.vid-content {
+    position: absolute;
+    z-index: 2;
+    top: 35%;
+    left: 35%;
+    text-align: center;
+    color: #fff;
+}
+
+.bottom-banner {
+    color: #fff;
+    padding: 10px;
+}
+
+@media screen and (min-width: 0px) and (max-width: 700px) {
+    .my-content,
+    .txt-banner {
+        display: none;  
+    }
+
+    .vid-content {
+        top: 12%;
+        left: 60%;
+    }
+
+    .custom-nav .custom-nav-item a {
+        padding: 10px 20px;
+        background-color: #225470;
+    }
+
+    .custom-nav-item:hover {
+        background-color: none;
+        border: none;
+        border-radius: none;
+    }
+}
